# flechtwerk-examples

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
clickhouse/config/: kafka.xml  listen.xml
clickhouse/init/: 01-init.sql
clickhouse/users.d/: open-default.xml
examples/: __init__.py  _runner.py  _setup.py
examples/adsb_flight_tracker/: README.md  __init__.py  __main__.py  attributes.py  boundaries.py  clickhouse.sql  conflict.py  enrich.py  geocoding.py  ingest.py  request.py  setup.py
examples/adsb_flight_tracker/tests/: logic_test.py  runner_test.py
examples/adsb_flight_tracker/tests/integration/: adsb_integration_test.py  boundaries_integration_test.py
examples/chaos_harness/: README.md  __init__.py  __main__.py  attributes.py  chaos.py  clickhouse.sql  setup.py  transformer.py  verify.py
examples/chaos_harness/tests/: logic_test.py  runner_test.py
examples/chaos_harness/tests/integration/: eos_integration_test.py
examples/clickhouse_sink/: README.md  __init__.py  __main__.py  clickhouse.sql  setup.py  sink.py
examples/clickhouse_sink/tests/: logic_test.py  runner_test.py
examples/clickhouse_sink/tests/integration/: sink_integration_test.py
examples/fermentation_monitor/: README.md  __init__.py  __main__.py  attributes.py  bridge.py  clickhouse.sql  monitor.py  setup.py  simulator.py
examples/fermentation_monitor/tests/: logic_test.py  runner_test.py
examples/fermentation_monitor/tests/integration/: mqtt_integration_test.py
examples/gdelt_news_stories/: README.md  __init__.py  __main__.py  clickhouse.sql  coverage.py  ingest.py  outlets.csv  outlets.py  parsers.py  schema.py  setup.py  sink.py  stories.py
examples/gdelt_news_stories/tests/: logic_test.py  runner_test.py
examples/gdelt_news_stories/tests/fixtures/: README.md  lastupdate-translation.txt  lastupdate.txt
examples/gdelt_news_stories/tests/integration/: coverage_integration_test.py  ingest_integration_test.py  sink_integration_test.py  stories_integration_test.py
examples/gtfs_delay_monitor/: README.md  __init__.py  __main__.py  attributes.py  clickhouse.sql  delays.py  ingest.py  loader.py
examples/gtfs_delay_monitor/tests/: logic_test.py  runner_test.py
examples/gtfs_delay_monitor/tests/fixtures/: make_fixtures.py
examples/gtfs_delay_monitor/tests/integration/: gtfs_delays_integration_test.py
examples/gtfs_german_rail_delays/: README.md  __init__.py  __main__.py  attributes.py  clickhouse.sql  delays.py  ingest.py  loader.py  setup.py
examples/gtfs_german_rail_delays/tests/: logic_test.py  runner_test.py
examples/gtfs_german_rail_delays/tests/fixtures/: make_fixtures.py  rt_sample.pb
examples/gtfs_german_rail_delays/tests/integration/: gtfs_delays_integration_test.py
examples/odds_arbitrage_radar/: README.md  __init__.py  __main__.py  arbitrage.py  attributes.py  clickhouse.sql  kalshi.py  polymarket.py  radar.py  request.py  setup.py
examples/odds_arbitrage_radar/tests/: logic_test.py  runner_test.py
examples/odds_arbitrage_radar/tests/fixtures/: PROVENANCE.md  kalshi_market.json  poly_book_colorado.json  poly_book_milwaukee.json  poly_market.json
examples/odds_arbitrage_radar/tests/integration/: odds_radar_integration_test.py
examples/smard_german_electricity_market/: README.md  __init__.py  __main__.py  attributes.py  clickhouse.sql  ingest.py  mix.py  setup.py
examples/smard_german_electricity_market/tests/: logic_test.py  runner_test.py
examples/smard_german_electricity_market/tests/fixtures/: index_quarterhour_sample.json  make_fixtures.py  week_sample.json
examples/smard_german_electricity_market/tests/integration/: smard_mix_integration_test.py
grafana/dashboards/: adsb-aviation-events.json  adsb-flight-tracker.json  fermentation-monitor.json  framework-metrics.json  gdelt-news-stories.json  gtfs-delay-monitor.json  gtfs-german-rail-delays.json  observability.json  odds-arbitrage-radar.json  smard-german-electricity-market.json  stream-data.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
mosquitto/: mosquitto.conf
prometheus/: prometheus.yml
